--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TI - AW</title>
-    <script src="scripts/app.js"></script>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('img/bck.png');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
 <body>
-    <img src="assets/acme.png" alt="ACME Company">
+
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">                                                      
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    KOÉ
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">EM BREVE</h1>
+    <hr class="w3-border-white" style="margin:auto;width:40%">
+    <p class="w3-xlarge w3-animate-top w3-center">Um dia sai</p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.youtube.com/watch?v=l46-Q6vMLcw" target="_blank">Locura fi</a>
+  </div>
+</div>
+
 </body>
 </html>
